codeserver/intermediate/code-server-svc.yaml
apiVersion: v1
kind: Service
metadata:
 name: code-server-svc-bmangesh
 namespace: bmangesh
spec:
 type: LoadBalancer
 ports:
 - port: 80
   targetPort: 8080
   protocol: TCP
 selector:
   app: code-server-bmangesh
